--- a/First challenge/index.html
+++ b/First challenge/index.html
@@ -8,12 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <a href="#" class="active"><i class="fa fa-home"></i></a>
-        <a href="#"><i class="fa fa-search"></i></a>
-        <a href="#"><i class="fa fa-envelope"></i></a>
-        <a href=""><i class="fa fa-globe"></i></a>
-        <a href="#"><i class="fa fa-trash"></i></a>
-    </div> 
+    <script src="main.js"></script>
 </body>
 </html>
